@@ -1,4 +1,2 @@
-FILE(GLOB TEMPLATE_LIST RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "*.txt" "*.in" "*.template")
-
-MANAGE_FILE_INSTALL(DATA fedora DEST_SUBDIR cmake/Templates) 
-
+#MANAGE_FILE_INSTALL(DATA fedora DEST_SUBDIR cmake/Templates ARGS PATTERN ".*.swp" EXCLUDE) 
+INSTALL(DIRECTORY fedora DESTINATION ${DATA_DIR}/cmake/Templates  PATTERN "*.sw[po]" EXCLUDE) 
