@@ -19,3 +19,10 @@ LOCAL_KOJI_HISTORY_CACHE_EXPIRY=43200
 # e.g. 12 hours expiry is 43200
 LOCAL_PKG_CHANGELOG_CACHE_EXPIRY=43200
 
+#######################################
+# RPM
+
+RPM_SPEC_TAG_PADDING=16
+RPM_SPEC_CMAKE_FLAGS="-DCMAKE_FEDORA_ENABLE_FEDORA_BUILD=1"
+RPM_SPEC_MAKE_FLAGS="VERBOSE=1 %{?_smp_mflags}"
+
